fix (Mobile ui bug): while scrolling on mobile, after closing browser menu on the top, an empty space would appear on the bottom.

--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ body::before {
   position: fixed;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
+  min-width: 100%;
+  min-height: 130%;
   background: url("../images/hero-bg.jpg") top center/cover no-repeat;
   z-index: -1000;
 }
